--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,84 @@
-site_name: My Docs
-theme:
+site_name: Blog
+site_url: https://mydomain.org/mysite
+theme: 
   name: material
+  custom_dir: overrides
+  features:
+    - content.tabs.link
+    - navigation.indexes
+    - navigation.tabs
+    #- navigation.sections
+    - toc.follow
+    - navigation.top
+    - navigation.instant
+    - navigation.tabs
+    - navigation.path
+    - search.suggest
+    - search.highlight
+    - search.share
+    - content.tabs.link
+    - content.code.annotation
+    - content.code.copy
+    - content.tabs.link
+  language: zh
+  palette: 
+
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7 
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
+# plugins:
+#   - search:
+#       separator: '[\s\u200b\-]'
+#   - blog:
+#       archive_date_format: yyyy'年'MMMM
+
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - toc:
+      permalink: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - admonition
+  - pymdownx.details
+  - attr_list
+  - md_in_html
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
+# extra_javascript:
+#   - javascripts/mathjax.js
+#   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+# nav:
+#   - homepage.md
+#   - Blog:
+#      - blog/index.md
+#   - Page:
+#     - page/index.md
+#     - Page1: page/page1.md
+#     - Page2: page/page2.md
+#     - section: 
+#       - page3: page/section/page3.md
