--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Blog
 site_url: https://mydomain.org/mysite
 theme: 
   name: material
-  custom_dir: overrides
+  # custom_dir: overrides
   features:
     - content.tabs.link
     - navigation.indexes
