--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Blog
 site_url: https://mydomain.org/mysite
 theme: 
   name: material
-  # custom_dir: overrides
+  custom_dir: overrides
   features:
     - content.tabs.link
     - navigation.indexes
@@ -68,9 +68,9 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
-# extra_javascript:
-#   - javascripts/mathjax.js
-#   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 # nav:
 #   - homepage.md
